# yew-trunk-welcome-page-example

./: .gitignore  404.html  Cargo.toml  README.adoc  README.md  Trunk.toml  _redirects  architecture.puml  index.html  main-8c157244baeba96b_bg.wasm  main.d.ts  main.js  main_bg.wasm  welcome-d45192163a7eabea.js  welcome-d45192163a7eabea_bg.wasm  welcome-fc5e43288f3e0579.js
.github/workflows/: gh-pages.yml
p/: index.html  main.js  welcome-fc5e43288f3e0579_bg.wasm
p/about/: index.html
p/welcome/: index.html
routing/: Cargo.toml
routing/src/: app.rs  config.rs  lib.rs  main_app.rs  navigation.rs  routes.rs  welcome.rs  welcome_app.rs
src/: about.rs  app.rs  exports.rs  home.rs  lib.rs  main.rs  main_app.rs  navigation.rs  project_details.rs  projects.rs  routes.rs
welcome-page/: Cargo.toml  index.html
welcome-page/src/: app.rs  app_state.rs  lib.rs  load_main_app.rs  main_app.rs  not_found.rs  routes.rs  switch.rs  welcome.rs  welcome_app.rs
