[package]
name = "yew-trunk-welcome-page-example"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["welcome-page"]

[workspace.dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = "0.3"
yew-router = "0.18"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
serde = "1.0"
serde_json = "1.0"


[dependencies]
yew = { workspace = true }
web-sys = { workspace = true }
yew-router = { workspace = true }
welcome-page = { path = "welcome-page" }
wasm-bindgen = { workspace = true }
