[package]
name = "yew-trunk-welcome-page-example"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["routing"]

[workspace.dependencies]
log = { version = "0.4" }
yew = { version = "0.21", features = ["csr"] }
web-sys = "0.3"
yew-router = "0.18"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"

[dependencies]
yew = { workspace = true }
web-sys = { workspace = true }
yew-router = { workspace = true }
routing = { path = "routing" }
wasm-bindgen = { workspace = true }
