[package]
name = "routing"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
yew = { workspace = true }
web-sys = { workspace = true }
yew-router = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-logger = "0.2"
