[package]
name = "welcome-page"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { workspace = true }
web-sys = { workspace = true }
yew-router = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
